data/derived/comb/progs/unify/prog2076.ml.out
Characters 13-18:
  List.combine([1;2] [3;4]);;
               ^^^^^
Error: This expression has type int list
       This is not a function; it cannot be applied.
